prevent horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,12 @@
 body {
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   overscroll-behavior: none; 
+  max-width: 100%;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 64px;
@@ -34,6 +36,7 @@ span {
 .content {
   width: 100%;
   margin: 80px 0px 0px 0px;
+  /* padding: 0; */
   @media (max-width: 768px) {
     margin: 60px 0px 0px 0px;
   }
